<resources>
    <string name="app_name">Google keep clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note_floating_action_button_desc">New note floating action button</string>
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="labels">Labels</string>
    <string name="create_new_label">Create new label</string>
    <string name="archive">Archive</string>
    <string name="deleted">Deleted</string>
    <string name="settings">Settings</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="edit_labels">Edit labels</string>
    <string name="no_notes_yet">No Notes yet!</string>
    <string name="no_archives_yet">No Archives yet!</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="enter_a_label_name">Enter a label name</string>
    <string name="google">Google</string>
    <string name="keep_clone">Keep clone</string>
    <string name="switch_layout">Switch layout</string>
    <string name="pin_note">Pin Note</string>
    <string name="pinned_caps">PINNED</string>
    <string name="others_caps">OTHERS</string>
    <string name="cancel_all_selections_desc">Cancel all selections</string>
    <string name="more_actions_desc">More actions</string>
</resources>